security :Alowendpoints